로그인 완료

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=100
 logging.level.com.metacoding.restserver=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-
+var.jwt.secret=metacoding
 
 
 
